--- a/css/app.css
+++ b/css/app.css
@@ -3,7 +3,7 @@
 :root {
   --main-text: rgba(240,240,240,1);
   --splashy: rgba(30,120,255,1);
-  --minimize-background: rgba(52,73,94,1.0);
+  --minimize-background: rgba(52, 73, 94,1.0);
   --close-background: rgba(207,0,15,1);
   --el-background: rgba(20,20,20,0.8);
   --el-border: rgba(0,0,0,1);
@@ -110,7 +110,7 @@ button.disabled, button.disabled:hover, button.disabled:active {
 ::-webkit-scrollbar { width: 15px; }
 ::-webkit-scrollbar-track { background-color: rgba(0,0,0,0); }
 ::-webkit-scrollbar-thumb {
-  background-color: rgba(52, 73, 94,1.0);
+  background-color: var(--minimize-background);
   box-shadow: 3px 3px 5px var(--el-shadow);
   border: 1px solid var(--el-border);
 }
