--- a/css/app.css
+++ b/css/app.css
@@ -1,13 +1,14 @@
 
 /* Variables */
 :root {
-  --main-text: rgba(240,240,240,1);
-  --splashy: rgba(30,120,255,1);
-  --minimize-background: rgba(52, 73, 94,1.0);
-  --close-background: rgba(207,0,15,1);
-  --el-background: rgba(20,20,20,0.8);
-  --el-border: rgba(0,0,0,1);
-  --el-shadow: rgba(0,0,0,0.8);
+  --main-text: rgba(240, 240, 240, 1.0);
+  --splashy: rgba(30, 120, 255, 1.0);
+  --scrollbar: rgba(52, 73, 94, 1.0);
+  --minimize-background: rgba(243, 156, 18, 1.0);
+  --close-background: rgba(231, 76, 60, 1.0);
+  --el-background: rgba(20, 20, 20, 0.8);
+  --el-border: rgba(0, 0, 0, 1.0);
+  --el-shadow: rgba(0, 0, 0, 0.8);
 }
 
 /* because content-box sucks */
@@ -17,7 +18,7 @@
 
 /* gets rid of a nw.js specific thing where everything you click has a blue border */
 *:focus {
-	outline: 0 !important;
+  outline: 0 !important;
 }
 
 body {
@@ -110,7 +111,7 @@ button.disabled, button.disabled:hover, button.disabled:active {
 ::-webkit-scrollbar { width: 15px; }
 ::-webkit-scrollbar-track { background-color: rgba(0,0,0,0); }
 ::-webkit-scrollbar-thumb {
-  background-color: var(--minimize-background);
+  background-color: var(--scrollbar);
   box-shadow: 3px 3px 5px var(--el-shadow);
   border: 1px solid var(--el-border);
 }
@@ -207,7 +208,7 @@ button.disabled, button.disabled:hover, button.disabled:active {
   background-color: black;
 }
 #closeButton:hover, #closeButton:active {
-  color: var(--main-text);
+  color: var(--el-border);
   background-color: var(--close-background);
   border-color: var(--close-background);
 }
@@ -221,7 +222,7 @@ button.disabled, button.disabled:hover, button.disabled:active {
   background-color: black;
 }
 #minimizeButton:hover, #minimizeButton:active {
-  color: var(--main-text);
+  color: var(--el-border);
   background-color: var(--minimize-background);
   border-color: var(--minimize-background);
 }
