--- a/css/app.css
+++ b/css/app.css
@@ -281,11 +281,9 @@ button.disabled, button.disabled:hover, button.disabled:active {
   height: calc(100vh - 31px);
   width: calc(100vw - 2px);
   background-color: var(--el-background);
-  /* text-align: center; */
   display: none;
   position: absolute;
   z-index: 9001;
-  /* top: 31px; */
   color: var(--splashy);
   border-style: dashed;
   border-color: var(--splashy);
@@ -294,8 +292,7 @@ button.disabled, button.disabled:hover, button.disabled:active {
   align-items: center;
 }
 
-#drag svg {
-  /* position: relative;
-  top: 50%;
-  transform: translateY(-50%); */
+/* Remove flickering with drag&drop */
+#drag * {
+  pointer-events: none; 
 }
